--- a/src/components/form-input.styles.scss
+++ b/src/components/form-input.styles.scss
@@ -1,6 +1,12 @@
+@mixin shrinkLabel {
+  top: -14px;
+  font-size: 12px;
+  color: black;
+}
+
 .group {
   position: relative;
-  margin: 1rem 0;
+  margin: 2.5rem 0;
 
   .form-input {
     background: none;
@@ -19,11 +25,24 @@
       outline: none;
       border-bottom: 1px solid red;
     }
+
+    &:focus ~ .form-input-label {
+      @include shrinkLabel();
+    }
   }
 
   .form-input-label {
     color: gray;
     font-size: 0.85rem;
     font-weight: normal;
+    position: absolute;
+    left: 5px;
+    top: 10px;
+    transition: 300ms ease all;
+    pointer-events: none;
+
+    &.shrink {
+      @include shrinkLabel();
+    }
   }
 }
